--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-props": "^0.0.3",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
